--- a/src/app/allmemo/allmemo.component.html
+++ b/src/app/allmemo/allmemo.component.html
@@ -37,10 +37,10 @@
                         data-target="#edit" (click)="setEdit(item)">
                         <i class="fa fa-pencil"> </i>
                     </span>
-                    <!-- <span class="btn btn-danger rounded-circle rounded-circle-sm">
+                    <span class="btn btn-danger rounded-circle rounded-circle-sm" (click)="delete(item['memoId'])">
                         <i class="fa fa-trash"> </i>
 
-                    </span> -->
+                    </span>
                 </td>
             </tr>
 
