--- a/src/app/so/so.component.html
+++ b/src/app/so/so.component.html
@@ -144,6 +144,19 @@
                             <input type="text" class="form-control" id="code" placeholder="SO CODE"
                                 [formControlName]="formControlNames.soCode">
                         </div>
+                        <div class="form-row">
+                            <div class="form-group col-6">
+                                <label for="fullname">Director's Full Name</label>
+                                <input type="text" class="form-control" id="fullname" placeholder="Director Full Name"
+                                    [formControlName]="formControlNames.directorFullname">
+                            </div>
+                            <div class="form-group col-6">
+                                <label for="fullnameNP">Full Name NP </label>
+                                <input type="text" class="form-control" id="fullnameNP"
+                                    placeholder="Director Full Name NP "
+                                    [formControlName]="formControlNames.directorFullnameNP">
+                            </div>
+                        </div>
                     </div>
 
                     <div class="form-row">
@@ -295,7 +308,19 @@
                                 [formControlName]="formControlNames.soCode">
                         </div>
                     </div>
-
+                    <div class="form-row">
+                        <div class="form-group col-6">
+                            <label for="ufullname">Director's Full Name</label>
+                            <input type="text" class="form-control" id="ufullname" placeholder="Director Full Name"
+                                [formControlName]="formControlNames.directorFullname">
+                        </div>
+                        <div class="form-group col-6">
+                            <label for="ufullnameNP">Full Name NP </label>
+                            <input type="text" class="form-control" id="ufullnameNP"
+                                placeholder="Director Full Name NP "
+                                [formControlName]="formControlNames.directorFullnameNP">
+                        </div>
+                    </div>
                     <div class="form-row">
                         <div class="form-group col-3">
                             <label for="ustreet">Street</label>
