--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -22,7 +22,8 @@
           </li>
           <li *ngFor="let item of listItems" [routerLink]="[item.urlTo]" routerLinkActive="router-link-active"
             data-toggle="popover" title="{{item.briefing}}">
-            <a *ngIf="item.sidebar"><i [className]="'fa fa-'+item.icon"></i>{{item.name}}</a>
+            <a *ngIf="item.sidebar && userInfo.rolePriority+1  > item.access"><i
+                [className]="'fa fa-'+item.icon"></i>{{item.name}}</a>
           </li>
         </ul>
       </aside>
